[package]
name = "vradio-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["macros", 'sync', "rt-multi-thread"]}
tokio-stream = "0.1.9"
warp = "0.3.2"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
futures = { version = "0.3.23", default-features = false, features = ["executor"]}
uuid = { version = "1.1.2", features = ["serde", "v4"]}
async-trait = "0.1.57"
redis = { version = "0.21.6", features = ["tokio-comp"]}
thiserror = "1.0"